contrast on contact section and fixed the padding on the project card

--- a/src/sass/components/_project-card.scss
+++ b/src/sass/components/_project-card.scss
@@ -77,7 +77,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 3rem 3rem 0 3rem;
+      padding: 2rem 2rem 0 2rem;
     }
 
     &__header-title-container {
@@ -88,7 +88,7 @@
     }
 
     &__description {
-      padding: 0 3rem;
+      padding: 0 2rem;
     }
 
     &__icons {
@@ -97,7 +97,7 @@
       align-items: center;
 
       gap: 1.875rem;
-      padding: 0 3rem 3rem 3rem;
+      padding: 0 2rem 2rem 2rem;
     }
 
     &__icons-column {
